# Design-Tool-Base

./: .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/editor/: index.html  package.json  vite.config.ts
apps/editor/src/: App.tsx  styles.css
apps/editor/src/components/: CanvasView.tsx  Icons.tsx  LayersPanel.tsx  PropertiesPanel.tsx  Toolbar.tsx
apps/editor/src/engine/: bridge.ts
benchmarks/: README.md
docs/: architecture.md
engine/: Cargo.toml
engine/core/: Cargo.toml
engine/core/src/: camera.rs  color.rs  dirty.rs  lib.rs  node_id.rs  rect.rs
engine/input/: Cargo.toml
engine/input/src/: lib.rs
engine/renderer/: Cargo.toml
engine/renderer/src/: gpu.rs  lib.rs  rect_pipeline.rs  shader_lib.rs  shader_pipeline.rs  uniforms.rs
engine/scene/: Cargo.toml
engine/scene/src/: lib.rs  node.rs  scene.rs  tests.rs
engine/selection/: Cargo.toml
engine/selection/src/: lib.rs
engine/wasm/: Cargo.toml
engine/wasm/src/: lib.rs
native/cpp/: README.md
shaders/: README.md  rect.wgsl
