[package]
name = "engine-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WASM bindings for the WebGPU design canvas engine"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
engine-core = { workspace = true }
engine-scene = { workspace = true }
engine-renderer = { workspace = true }
engine-input = { workspace = true }
engine-selection = { workspace = true }
bytemuck = { workspace = true }
glam = { workspace = true }
wgpu = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
console_error_panic_hook = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"

[dependencies.web-sys]
workspace = true
features = [
  "console",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "Window",
  "Gpu",
  "Navigator",
]
